fix: resolve search read-only error, patch UI rendering crashes, and seed analytics dummy data